# PIVOT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: pivot_default.yaml
data/: labels.example.csv  mri_cases.example.csv  pivot_manifest.example.csv  segmentation_cases.example.csv  slides.example.csv
docs/: pipeline.md
pivot/: __init__.py
pivot/data/: __init__.py  datasets.py
pivot/evaluation/: __init__.py  diagnostic.py
pivot/models/: __init__.py  layers.py  mri_triad.py  pathology_gigapath.py  pivot_model.py
pivot/preprocessing/: __init__.py  manifest.py  mri.py  segmentation.py  wsi.py
pivot/training/: __init__.py  engine.py  losses.py  metrics.py
pivot/utils/: config.py
scripts/: build_pivot_manifest.py  evaluate_predictions.py  extract_gigapath_slide_embeddings.py  infer_pivot.py  preprocess_mri.py  run_tumor_segmentation.py  tile_wsi.py  train_pathology.py  train_pivot.py
